--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".SmsBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
+        <receiver
+            android:name=".SMSReceiver"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
